# logline-lab-8

./: .gitignore  ACCEPTANCE_GATES.md  CODEX_BRIEF.md  EXPECTED_OUTPUT_TREE.md  NO_DRIFT_RULES.md  VENDOR_IMMUTABILITY.md
.github/: pull_request_template.md
docs/contributing/: GENERATOR_WORKFLOW.md  REPOSITORY_HYGIENE.md
logline-labkit-generator/: README.md  generator.manifest.yaml
logline-labkit-generator/acceptance/: command-matrix.expected.yaml  expected-tree.yaml  no-vendor-edits.yaml  smoke-local.expected.yaml
logline-labkit-generator/blueprints/: act-model.blueprint.yaml  authority.blueprint.yaml  cli.commands.yaml  docs.index.yaml  package.personal-offline.yaml  package.santo-andre.yaml  packs-and-profiles.blueprint.yaml  product.blueprint.yaml  profile.local-offline.yaml  profile.supabase.yaml  recovery.rules.yaml  schemas.index.yaml
logline-labkit-generator/corpus/: APPROVAL_NOTE.md  SHA256.txt
logline-labkit-generator/templates/project/crates/logline-lab-cli/: Cargo.toml
logline-labkit-generator/templates/project/crates/logline-lab-cli/src/: main.rs
logline-labkit-generator/templates/project/crates/logline-lab-cli/tests/: candidate_index.rs  candidates.rs  cli_act.rs  help_version.rs  lab_home.rs  packs_profiles.rs  projections.rs  reports.rs  setup.rs
logline-labkit-generator/templates/project/crates/logline-lab-core/: Cargo.toml
logline-labkit-generator/templates/project/crates/logline-lab-core/src/: candidates.rs  catalog.rs  ghosts.rs  lab_home.rs  lib.rs  projections.rs  reports.rs  supabase.rs
(+85 files in other folders)
