[package]
name = "logline-lab-cli"
version = "0.1.0-alpha.0"
edition = "2021"

[[bin]]
name = "logline-lab"
path = "src/main.rs"

[dependencies]
axum = "0.7"
logline-lab-core = { path = "../logline-lab-core" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
