[package]
name = "logline-lab-core"
version = "0.1.0"
edition = "2021"

[dependencies]
logline-act = { path = "../logline-act" }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde_json = "1"
tokio-postgres-rustls = { version = "0.14", default-features = false, features = ["ring", "webpki-roots"] }
